--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tiny-popover": "^8.1.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
